[gd_scene load_steps=34 format=2]

[ext_resource path="res://assets/GUI/Menu/vydelenie.png" type="Texture" id=1]
[ext_resource path="res://assets/Background/lobby1.png" type="Texture" id=2]
[ext_resource path="res://assets/Player/AssetPLayerArratprisel2_2.png" type="Texture" id=3]
[ext_resource path="res://assets/Dummy/dummy.png" type="Texture" id=4]
[ext_resource path="res://assets/Player/AssetPLayerArrat1.png" type="Texture" id=5]
[ext_resource path="res://scripts/LobbySoundtrack.vs" type="Script" id=6]
[ext_resource path="res://assets/GUI/Menu/Menu.gd" type="Script" id=7]
[ext_resource path="res://scripts/AutoPlayer.gd" type="Script" id=8]
[ext_resource path="res://assets/Player/AssetPLayerArrat3.png" type="Texture" id=9]
[ext_resource path="res://assets/Background/lobby2.png" type="Texture" id=10]
[ext_resource path="res://assets/Player/AssetPLayerArratprisel3_2.png" type="Texture" id=11]
[ext_resource path="res://addons/transit/Transit.tscn" type="PackedScene" id=12]
[ext_resource path="res://assets/Player/AssetPLayerArrat4.png" type="Texture" id=13]
[ext_resource path="res://assets/Player/AssetPLayerArratprisel1_2.png" type="Texture" id=14]
[ext_resource path="res://assets/Player/AssetPLayerArrat2.png" type="Texture" id=15]
[ext_resource path="res://assets/GUI/transparent.png" type="Texture" id=16]
[ext_resource path="res://assets/GUI/Menu/menu.png" type="Texture" id=17]
[ext_resource path="res://scripts/Save.gd" type="Script" id=18]
[ext_resource path="res://assets/GUI/Settings/Settings.tscn" type="PackedScene" id=19]
[ext_resource path="res://assets/GUI/Menu/gray_select.png" type="Texture" id=20]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 513.367, 12.0937 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 10 ) ],
"loop": true,
"name": "idle",
"speed": 1.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 522.186, 11.9596 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 10, 233.152 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 25.227, 3.39905 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 24.1675, 1.89822 )

[sub_resource type="SegmentShape2D" id=7]
a = Vector2( -134.99, 118.447 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 19.6767, 23.7101 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 13 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 15 ), ExtResource( 9 ) ],
"loop": true,
"name": "Walk",
"speed": 4.0
}, {
"frames": [ ExtResource( 14 ), ExtResource( 3 ), ExtResource( 11 ) ],
"loop": true,
"name": "SquatAction",
"speed": 5.0
}, {
"frames": [ ExtResource( 13 ) ],
"loop": true,
"name": "jump",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "posible",
"speed": 5.0
}, {
"frames": [ ExtResource( 14 ) ],
"loop": true,
"name": "SquatIdle",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 19.8385, 19.4203 )

[sub_resource type="Shader" id=11]
code = "shader_type canvas_item;

uniform float lod: hint_range(0.0, 5) = 1.0;

void fragment(){
	vec4 color = texture(SCREEN_TEXTURE, SCREEN_UV, lod);
	COLOR = color;
}"

[sub_resource type="ShaderMaterial" id=12]
shader = SubResource( 11 )
shader_param/lod = 1.5

[sub_resource type="GDScript" id=13]
script/source = "extends Button

var enable:bool = false


func _ready():
	var time_machine:Node = find_node(\"TimeMachine\")
"

[node name="Menu" type="Node2D"]
position = Vector2( 0, -60.5811 )
script = ExtResource( 7 )

[node name="Terrain" type="StaticBody2D" parent="."]
position = Vector2( 0, 368.357 )
scale = Vector2( 1.9, 1.9 )

[node name="TerrainCollision" type="CollisionShape2D" parent="Terrain"]
position = Vector2( 495.805, 53.6347 )
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Terrain"]
position = Vector2( 495.628, -73.8014 )
scale = Vector2( 5.33135, 5.54181 )
frames = SubResource( 2 )
animation = "idle"
playing = true
script = ExtResource( 6 )

[node name="UpBorder" type="CollisionShape2D" parent="Terrain"]
visible = false
position = Vector2( 486.356, -386.304 )
shape = SubResource( 3 )

[node name="LeftBorder" type="CollisionShape2D" parent="Terrain"]
visible = false
position = Vector2( -11.4124, -163.588 )
shape = SubResource( 4 )

[node name="RightBorder" type="CollisionShape2D" parent="Terrain"]
visible = false
position = Vector2( 1008.78, -160.513 )
shape = SubResource( 4 )

[node name="FirstBorder" type="CollisionShape2D" parent="Terrain"]
position = Vector2( 99.5895, -42.3785 )
shape = SubResource( 5 )
one_way_collision = true

[node name="SecondBorder" type="CollisionShape2D" parent="Terrain"]
position = Vector2( 169.514, -90.7393 )
shape = SubResource( 6 )
one_way_collision = true

[node name="Hill" type="CollisionShape2D" parent="Terrain"]
position = Vector2( 540.015, -75.6807 )
shape = SubResource( 7 )
one_way_collision = true

[node name="dummy" type="Sprite" parent="."]
position = Vector2( 1682.09, 398.164 )
scale = Vector2( 8.162, 8.485 )
texture = ExtResource( 4 )
offset = Vector2( 0, -4.75143 )

[node name="dummy2" type="Sprite" parent="dummy"]
position = Vector2( -11.8195, -4.80079 )
scale = Vector2( 1.01564, 0.977069 )
texture = ExtResource( 4 )

[node name="AutoPlayer" type="KinematicBody2D" parent="."]
position = Vector2( -42.7076, 317.947 )
scale = Vector2( 1.9, 1.9 )
script = ExtResource( 8 )

[node name="Collision" type="CollisionShape2D" parent="AutoPlayer"]
position = Vector2( 101.15, 46.1497 )
shape = SubResource( 8 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="AutoPlayer"]
position = Vector2( 94.3338, 43.5671 )
scale = Vector2( 4.41596, 4.19006 )
frames = SubResource( 9 )
animation = "Idle"

[node name="CollisionSit" type="CollisionShape2D" parent="AutoPlayer"]
visible = false
position = Vector2( 100.997, 50.2748 )
shape = SubResource( 10 )
disabled = true

[node name="Delay" type="Timer" parent="AutoPlayer"]
wait_time = 0.001
autostart = true

[node name="Timer" type="Timer" parent="AutoPlayer"]
wait_time = 5.0
autostart = true

[node name="StayTime" type="Timer" parent="AutoPlayer"]
wait_time = 7.0

[node name="dummy2" type="Sprite" parent="."]
position = Vector2( 1774.83, 357.345 )
scale = Vector2( 8.045, 8.045 )
texture = ExtResource( 4 )

[node name="Blur" type="Sprite" parent="."]
material = SubResource( 12 )
position = Vector2( 799.85, 270.44 )
scale = Vector2( 17.9126, 13.3 )
texture = ExtResource( 16 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 937.362, 227.527 )
current = true

[node name="Transit" parent="." instance=ExtResource( 12 )]
margin_left = 1.48862
margin_top = 1.33894
margin_right = 1.48862
margin_bottom = 1.33894

[node name="Settings" parent="." instance=ExtResource( 19 )]
margin_left = -23.811
margin_top = -312.699
margin_right = -23.811
margin_bottom = -312.699

[node name="Menu" type="VBoxContainer" parent="."]
visible = false
margin_top = -318.0
margin_right = 1011.0
margin_bottom = 250.0
rect_scale = Vector2( 1.9, 1.9 )
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Menu"]
margin_top = 284.0
margin_right = 1011.0
margin_bottom = 284.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Menu/HBoxContainer"]
margin_left = 505.0
margin_right = 505.0

[node name="menu" type="Sprite" parent="Menu/HBoxContainer/TextureRect"]
position = Vector2( 13.464, -17.8619 )
scale = Vector2( 3, 3 )
texture = ExtResource( 17 )

[node name="PlayButton" type="Button" parent="Menu/HBoxContainer/TextureRect"]
margin_left = -53.0
margin_top = -128.0
margin_right = 79.0
margin_bottom = -81.0
focus_mode = 0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="selected" type="Sprite" parent="Menu/HBoxContainer/TextureRect/PlayButton"]
position = Vector2( 66.4596, 24.6217 )
scale = Vector2( 2.99785, 2.99357 )
texture = ExtResource( 1 )

[node name="LoadButton" type="Button" parent="Menu/HBoxContainer/TextureRect"]
margin_left = -53.5908
margin_top = -69.5138
margin_right = 78.4092
margin_bottom = -22.5138
focus_mode = 0
flat = true
script = SubResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="selected" type="Sprite" parent="Menu/HBoxContainer/TextureRect/LoadButton"]
visible = false
position = Vector2( 67.4664, 23.6069 )
scale = Vector2( 2.99633, 2.98568 )
texture = ExtResource( 1 )

[node name="disabled" type="Sprite" parent="Menu/HBoxContainer/TextureRect/LoadButton"]
position = Vector2( 67.4642, 23.6211 )
scale = Vector2( 3.00015, 2.99572 )
texture = ExtResource( 20 )

[node name="SettingsButton" type="Button" parent="Menu/HBoxContainer/TextureRect"]
margin_left = -52.0
margin_top = -12.0
margin_right = 78.0
margin_bottom = 34.0
focus_mode = 0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="selected" type="Sprite" parent="Menu/HBoxContainer/TextureRect/SettingsButton"]
visible = false
position = Vector2( 65.487, 22.6082 )
scale = Vector2( 2.99666, 2.9897 )
texture = ExtResource( 1 )

[node name="ExitButton" type="Button" parent="Menu/HBoxContainer/TextureRect"]
margin_left = -52.0
margin_top = 44.0
margin_right = 80.0
margin_bottom = 91.0
focus_mode = 0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="selected" type="Sprite" parent="Menu/HBoxContainer/TextureRect/ExitButton"]
visible = false
position = Vector2( 65.4569, 23.674 )
scale = Vector2( 2.99495, 2.99338 )
texture = ExtResource( 1 )

[node name="TimeMachine" type="Node2D" parent="."]
position = Vector2( 0, -325 )
script = ExtResource( 18 )

[node name="Transit" parent="TimeMachine" instance=ExtResource( 12 )]
margin_left = 28.4203
margin_top = 5.14144
margin_right = 28.4203
margin_bottom = 5.14144

[connection signal="timeout" from="AutoPlayer/Delay" to="AutoPlayer" method="_on_Delay_timeout"]
[connection signal="timeout" from="AutoPlayer/Timer" to="AutoPlayer" method="_on_Timer_timeout"]
[connection signal="timeout" from="AutoPlayer/StayTime" to="AutoPlayer" method="_on_StayTime_timeout"]
[connection signal="mouse_entered" from="Menu/HBoxContainer/TextureRect/PlayButton" to="." method="_on_PlayButton_mouse_entered"]
[connection signal="pressed" from="Menu/HBoxContainer/TextureRect/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="mouse_entered" from="Menu/HBoxContainer/TextureRect/LoadButton" to="." method="_on_LoadButton_mouse_entered"]
[connection signal="pressed" from="Menu/HBoxContainer/TextureRect/LoadButton" to="." method="_on_LoadButton_pressed"]
[connection signal="mouse_entered" from="Menu/HBoxContainer/TextureRect/SettingsButton" to="." method="_on_SettingsButton_mouse_entered"]
[connection signal="pressed" from="Menu/HBoxContainer/TextureRect/SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="mouse_entered" from="Menu/HBoxContainer/TextureRect/ExitButton" to="." method="_on_ExitButton_mouse_entered"]
[connection signal="pressed" from="Menu/HBoxContainer/TextureRect/ExitButton" to="." method="_on_ExitButton_pressed"]
